# CrateGen

./: Dockerfile  README.md  lefthook.yml  pyproject.toml  schema.md
.github/workflows/: ci.yml
crategen/: cli.py  converter_manager.py  models.py  utils.py  validators.py
crategen/converters/: abstract_converter.py  tes_converter.py  utils.py  wes_converter.py
crategen/models/: __init__.py  tes_models.py  wes_models.py  wrroc_models.py
crategen/utils/: formatting.py
src/: converter.py
tests/data/input/: tes_example.json  tes_example_with_missing_fields.json  tes_full.json  tes_minimal.json  wes_example.json  wes_full.json  wes_minimal.json  wrroc_from_tes_full.json  wrroc_from_tes_minimal.json  wrroc_from_wes_full.json  wrroc_from_wes_minimal.json  wrroc_full.json
tests/data/output/: procrc_from_tes_full.json  procrc_from_tes_minimal.json  tes_from_wrroc_full.json  tes_to_wrroc_output.json  tes_to_wrroc_output_with_missing_fields.json  wes_from_wrroc_full.json  wes_to_wrroc_outpu.json  wes_to_wrroc_output.json  wfrc_from_wes_full.json  wfrc_from_wes_minimal.json  wrroc_from_tes_full_output.json
tests/integration/: test_conversion_integration.py
tests/unit/: test_tes_converter.py  test_tes_models.py  test_wes_converter.py  test_wrroc_models.py
