[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "CrateGen"
version = "0.1.0"
description = "A tool for converting TES and WES to WRROC"
authors = ["Karanjot Singh <karanjots801@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/elixir-cloud-aai/CrateGen"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.8.2"
requests = "^2.25.1"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.4"
typos = "^1.21.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"
furo = "^2024.5.6"

[tool.poetry.group.security.dependencies]
bandit = "^1.7.8"
safety = "^3.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.types.dependencies]
mypy = "^1.10.1"



[tool.poetry.scripts]
crategen = "crategen.cli:cli"

[tool.bandit]
skips = [
  "B321", # FTP-related functions are being called.
  "B402", # A FTP-related module is being imported.
]

[tool.ruff]
exclude = [
  ".git",
  "/.pytest_cache",
  "__pycache__",
  "build",
  "_build",
  "dist",
  ".env",
]
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true


[tool.ruff.lint]
select = [
  "B", # flake8-bugbear
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "PL", # pylint
  "SIM", # flake8-simplify
  "UP", # pyupgrade
]
ignore = ["E203", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.typos.default.extend-words]
mke = 'mke'

